syntax = "proto3";

package ci.proto.observer;

option java_package = "ru.yandex.ci.observer.core";

import "ci/proto/storage/check_iteration.proto";
import "ci/proto/storage/check_task.proto";
import "ci/proto/storage/common.proto";
import "google/protobuf/timestamp.proto";

message InternalMessages {
    repeated InternalMessage messages = 1;
    ci.proto.storage.MessageMeta meta = 2;
}

message AggregateStages {
    repeated ci.proto.storage.FullTaskId taskIds = 1;
    ci.proto.storage.IterationId iteration_id = 2;
}

message Cancel {
    reserved 1;
    ci.proto.storage.IterationId iteration_id = 2;
}

message FinishPartition {
    ci.proto.storage.FullTaskId taskId = 1;
    int32 partition = 2;
}

message TechnicalStatisticsMessage {
    ci.proto.storage.FullTaskId task_id = 1;
    int32 partition = 2;
    TechnicalStatistics technical_statistics = 3;
}

message TechnicalStatistics {
    double machine_hours = 1;
    double cache_hit = 2;
    int32 number_of_nodes = 3;
}

message Pessimize {
    ci.proto.storage.IterationId iteration_id = 1;
}

message Registered {
    ci.proto.storage.IterationId iteration_id = 1;
    ci.proto.storage.FullTaskId task_id = 2;
}

message FatalError {
    ci.proto.storage.FullTaskId task_id = 1;
}

message IterationFinish {
    ci.proto.storage.IterationId iteration_id = 1;
    ci.proto.storage.CheckStatus status = 2;
    google.protobuf.Timestamp finish_timestamp = 3;
}

message InternalMessage {
    ci.proto.storage.MessageMeta meta = 1;
    reserved 2;
    int64 check_id = 3;

    oneof messages {
        AggregateStages aggregate = 100;
        Cancel cancel = 101;
        FinishPartition finish_partition = 102;
        // reserved 103;
        // reserved 104;
        // reserved 105
        Pessimize pessimize = 106;
        // reserved 107;
        Registered registered = 108;
        FatalError fatal_error = 109;
        IterationFinish iteration_finish = 110;
        TechnicalStatisticsMessage technical_stats_message = 111;
    }
}

