syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";

import "ci/proto/storage/common.proto";
import "ci/proto/storage/check.proto";
import "ci/proto/storage/check_iteration.proto";
import "ci/proto/storage/check_task.proto";

message EventsStreamMessage {
    MessageMeta meta = 1;

    oneof messages {
        RegistrationMessage registration = 10;
        CancelMessage cancel = 11;
        StorageTraceStage trace = 12;
        StorageIterationFinishMessage iteration_finish = 13;
    }
}

message RegistrationMessage {
    Check check = 1;
    Iteration iteration = 2;
    CheckTask task = 3;
}

message CancelMessage {
    IterationId iteration_id = 1;
}

message StorageTraceStage {
    FullTaskId full_task_id = 1;
    TraceStage trace = 2;
}

message StorageIterationFinishMessage {
    IterationId iteration_id = 1;
    CheckStatus status = 2;
}
